Clean up and simplify some things